--- a/ui/src/app/data-explorer/components/widgets/utils/select-color-properties/select-color-properties.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/utils/select-color-properties/select-color-properties.component.scss
@@ -15,3 +15,13 @@
  * limitations under the License.
  *
  */
+
+.marginColorField {
+  margin-left: 1px;
+  margin-right: 1px;
+}
+
+.marginColorFieldRight {
+  margin-left: 1px;
+  margin-right: 5px;
+}
