[STREAMPIPES-453] Add object permission management for pipeline elements

--- a/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
+++ b/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
@@ -49,6 +49,10 @@
                             <mat-icon>refresh</mat-icon>
                             <span>&nbsp;Update</span>
                         </button>
+                        <button mat-menu-item (click)="showPermissionsDialog(item.elementId, item.name)" [disabled]="!item.available">
+                            <mat-icon>share</mat-icon>
+                            <span>&nbsp;Manage permissions</span>
+                        </button>
                     </mat-menu>
                 </div>
             </div>
