--- a/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.html
@@ -103,6 +103,12 @@
                             class="material-icons">content_copy</i>
                     </button>
                 </span>
+                        <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
+                    <button color="accent" mat-button mat-icon-button matTooltip="Manage permissions"
+                            matTooltipPosition="above" (click)="showPermissionsDialog(adapter)"><i
+                            class="material-icons">share</i>
+                    </button>
+                </span>
                         <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
                     <button color="accent" mat-button mat-icon-button matTooltip="Delete adapter"
                             data-cy="delete" matTooltipPosition="above" (click)="deleteAdapter(adapter)">
