[STREAMPIPES-454] Refactor density charts and histograms into 2d correlation charts

--- a/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
@@ -63,10 +63,10 @@
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
             </sp-data-explorer-indicator-chart-widget-config>
         </div>
-        <div *ngIf="currentlyConfiguredWidget.widgetType === 'density-chart'" class="h-100 p-0">
-            <sp-data-explorer-density-chart-widget-config
+        <div *ngIf="currentlyConfiguredWidget.widgetType === 'correlation-chart'" class="h-100 p-0">
+            <sp-data-explorer-correlation-chart-widget-config
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
-            </sp-data-explorer-density-chart-widget-config>
+            </sp-data-explorer-correlation-chart-widget-config>
         </div>
         <div *ngIf="currentlyConfiguredWidget.widgetType === 'pie-chart'" class="h-100 p-0">
             <sp-data-explorer-pie-chart-widget-config
