--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -21,6 +21,7 @@
         <div fxLayout="fill">
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)"
                            color="accent">
+                <mat-tab label="General"></mat-tab>
                 <mat-tab label="DataLake"></mat-tab>
                 <mat-tab label="Mail"></mat-tab>
                 <mat-tab label="Messaging"></mat-tab>
@@ -32,18 +33,21 @@
 
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100">
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 0">
+        <sp-general-configuration fxFlex="100"></sp-general-configuration>
+    </div>
+    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 1">
         <sp-datalake-configuration fxFlex="100"></sp-datalake-configuration>
     </div>
-        <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 1">
-            <sp-email-configuration fxFlex="100"></sp-email-configuration>
-        </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 2">
-        <messaging-configuration fxFlex="100"></messaging-configuration>
+        <sp-email-configuration fxFlex="100"></sp-email-configuration>
     </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 3">
-        <pipeline-element-configuration fxFlex="100"></pipeline-element-configuration>
+        <messaging-configuration fxFlex="100"></messaging-configuration>
     </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 4">
+        <pipeline-element-configuration fxFlex="100"></pipeline-element-configuration>
+    </div>
+    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 5">
         <sp-security-configuration fxFlex="100"></sp-security-configuration>
     </div>
     </div>
