[STREAMPIPES-456] Refactor pie charts and histograms into distribution charts

--- a/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
@@ -53,11 +53,6 @@
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
             </sp-data-explorer-time-series-chart-widget-config>
         </div>
-        <div *ngIf="currentlyConfiguredWidget.widgetType === 'histogram-chart'" class="h-100 p-0">
-            <sp-data-explorer-histogram-chart-widget-config
-                    [currentlyConfiguredWidget]="currentlyConfiguredWidget">
-            </sp-data-explorer-histogram-chart-widget-config>
-        </div>
         <div *ngIf="currentlyConfiguredWidget.widgetType === 'indicator-chart'" class="h-100 p-0">
             <sp-data-explorer-indicator-chart-widget-config
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
@@ -68,10 +63,10 @@
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
             </sp-data-explorer-correlation-chart-widget-config>
         </div>
-        <div *ngIf="currentlyConfiguredWidget.widgetType === 'pie-chart'" class="h-100 p-0">
-            <sp-data-explorer-pie-chart-widget-config
+        <div *ngIf="currentlyConfiguredWidget.widgetType === 'distribution-chart'" class="h-100 p-0">
+            <sp-data-explorer-distribution-chart-widget-config
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
-            </sp-data-explorer-pie-chart-widget-config>
+            </sp-data-explorer-distribution-chart-widget-config>
         </div>
     </div>
 </div>
