--- a/ui/src/app/login/components/register/register.component.scss
+++ b/ui/src/app/login/components/register/register.component.scss
@@ -16,51 +16,17 @@
  *
  */
 
-package org.apache.streampipes.model.client.user;
+.info-box {
+  padding: 8px;
+  border-radius: 5px;
+}
 
-import java.util.List;
+.register-error {
+  background: #ffa2a2;
+  color: #3e3e3e;
+}
 
-public class RegistrationData {
-
-	private String username;
-	private String password;
-	private Role role;
-	
-	private List<String> roles;
-	
-	public RegistrationData()
-	{
-		
-	}
-	
-	public String getUsername() {
-		return username;
-	}
-	public void setUsername(String username) {
-		this.username = username;
-	}
-	public String getPassword() {
-		return password;
-	}
-	public void setPassword(String password) {
-		this.password = password;
-	}
-
-	public List<String> getRoles() {
-		return roles;
-	}
-
-	public void setRoles(List<String> roles) {
-		this.roles = roles;
-	}
-
-	public Role getRole() {
-		return role;
-	}
-
-	public void setRole(Role selectedRole) {
-		this.role = selectedRole;
-	}
-	
-	
+.register-success {
+  background: #a2ffa2;
+  color: #3e3e3e;
 }
