[STREAMPIPES-457] Add feature to restore lost passwords

--- a/ui/src/app/login/components/login/login.component.scss
+++ b/ui/src/app/login/components/login/login.component.scss
@@ -22,3 +22,18 @@
   color: #3e3e3e;
   border-radius: 5px;
 }
+
+.info-box {
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.register-error {
+  background: #ffa2a2;
+  color: #3e3e3e;
+}
+
+.register-success {
+  background: #a2ffa2;
+  color: #3e3e3e;
+}
