--- a/ui/src/app/login/components/set-new-password/set-new-password.component.html
+++ b/ui/src/app/login/components/set-new-password/set-new-password.component.html
@@ -16,30 +16,39 @@
   ~
   -->
 
-
 <sp-auth-box>
     <div fxFlex="100" fxLayout="column" fxLayoutAlign="center start">
-        <h1>Restore password</h1>
-        <h5>Enter your mail address and we'll send you a link to restore your password.</h5>
+        <h1>Set new password</h1>
     </div>
     <div fxLayout="column" fxFlex="100">
         <form [formGroup]="parentForm">
             <div fxLayout="column">
                 <mat-form-field color="accent">
-                    <mat-label>Email</mat-label>
-                    <input formControlName="username" fxFlex
-                           matInput>
+                    <mat-label>New password</mat-label>
+                    <input formControlName="password" fxFlex
+                           type="password"
+                           matInput
+                           required>
+                </mat-form-field>
+                <mat-form-field color="accent">
+                    <mat-label>Repeat password</mat-label>
+                    <input formControlName="repeatPassword" fxFlex
+                           type="password"
+                           matInput
+                           required>
                 </mat-form-field>
                 <div class="form-actions" style="margin-top:20px;">
-                    <button mat-button mat-raised-button color="accent" (click)="sendRestorePasswordLink()"
-                            [disabled]="!parentForm.valid" *ngIf="!restoreSuccess">
-                        <span>Reset password</span>
+                    <button mat-button mat-raised-button color="accent" (click)="setNewPassword()"
+                            [disabled]="!parentForm.valid" *ngIf="!resetSuccess">
+                        <span>Set password</span>
                     </button>
-                    <div class="md-warn" *ngIf="restoreCompleted && !restoreSuccess">
-                        <h5 class="info-box register-error">Unknown error - contact your administrator to check the mail settings.</h5>
+                    <mat-spinner [mode]="'indeterminate'" color="accent" [diameter]="20"
+                                 *ngIf="resetInProgress" style="margin-top:10px;"></mat-spinner>
+                    <div class="md-warn" *ngIf="resetPerformed && !resetSuccess">
+                        <h5 class="info-box register-error">There was an error while resetting your password.</h5>
                     </div>
-                    <div class="md-success" *ngIf="restoreCompleted && restoreSuccess">
-                        <h5 class="info-box register-success">In case this account exists, you'll receive a mail with instructions to restore your password shortly.</h5>
+                    <div class="md-success" *ngIf="resetPerformed && resetSuccess">
+                        <h5 class="info-box register-success">Password successfully changed.</h5>
                     </div>
                     <div class="mt-10">
                         <a [routerLink]="['/login']">Go to login page</a>
