--- a/streampipes-mail/src/main/resources/style.css
+++ b/streampipes-mail/src/main/resources/style.css
@@ -15,24 +15,33 @@
  * limitations under the License.
  *
  */
-package org.apache.streampipes.mail;
 
-import org.apache.streampipes.config.backend.model.EmailConfig;
-import org.apache.streampipes.mail.template.TestMailTemplate;
-import org.apache.streampipes.mail.utils.MailUtils;
-import org.simplejavamail.api.email.Email;
-
-public class MailTester extends AbstractMailer {
-
-  public void sendTestMail(EmailConfig emailConfig) {
-    deliverMail(emailConfig, makeTestMail(emailConfig));
-  }
-
-  private Email makeTestMail(EmailConfig emailConfig) {
-    return baseEmail(emailConfig)
-            .withSubject("Hello from " + MailUtils.extractAppName())
-            .appendTextHTML(new TestMailTemplate().generateTemplate())
-            .to(emailConfig.getTestRecipientAddress())
-            .buildEmail();
-  }
+body {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    padding: 15px;
+    --color-primary: #39b54a;
+    --color-accent: #1b1464;
 }
+
+.mail-title {
+    font-weight: bold;
+    font-size:14pt;
+    color: var(--color-primary);
+    margin-top: 15px;
+}
+
+.mail-body-text {
+    font-size: 11pt;
+}
+
+.logo {
+    height: 40px;
+    max-height: 40px;
+}
+
+.divider {
+    border: 1px solid var(--color-accent);
+    margin: 10px 0;
+}
+
+
