[STREAMPIPES-457] Add feature to activate newly created accounts

--- a/streampipes-mail/src/main/resources/style.css
+++ b/streampipes-mail/src/main/resources/style.css
@@ -32,11 +32,12 @@ body {
 
 .mail-body-text {
     font-size: 11pt;
+    font-weight: normal;
 }
 
 .logo {
-    height: 40px;
-    max-height: 40px;
+    height: 50px;
+    max-height: 50px;
 }
 
 .divider {
