--- a/ui/src/app/login/components/register/register.component.html
+++ b/ui/src/app/login/components/register/register.component.html
@@ -53,7 +53,7 @@
                         <h5 class="info-box register-error">{{registrationError}}</h5>
                     </div>
                     <div class="md-success" *ngIf="registrationSuccess">
-                        <h5 class="info-box register-success">We've sent out a confirmation mail to this address and try again.</h5>
+                        <h5 class="info-box register-success">We've sent out a confirmation mail to this address.</h5>
                     </div>
                     <div class="mt-10">
                         <a [routerLink]="['/login']">Go to login page</a>
