--- a/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
@@ -22,7 +22,7 @@
             <div class="options-bar-item pl-10" fxLayoutAlign="start center" fxLayout="row">
                 <button mat-button mat-raised-button color="accent" (click)="openNewDashboardDialog()">
                     <i class="material-icons">add</i>
-                   <span> New dashboard</span>
+                    <span> New dashboard</span>
                 </button>
             </div>
         </div>
@@ -93,15 +93,15 @@
                         </div>
                     </td>
                 </ng-container>
-                <ng-container matColumnDef="permissions">
-                    <th fxFlex="8" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Permissions</th>
-                    <td fxFlex="8" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
-                        <div fxLayout="row">
-                            <button mat-button mat-icon-button color="accent"
-                                    (click)="showPermissionsDialog(element)">
-                                <i class="material-icons">share</i>
-                            </button>
-                        </div>
+                <ng-container matColumnDef="permissions" *ngIf="isAdmin">
+                        <th fxFlex="8" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Permissions</th>
+                        <td fxFlex="8" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                            <div fxLayout="row">
+                                <button mat-button mat-icon-button color="accent"
+                                        (click)="showPermissionsDialog(element)">
+                                    <i class="material-icons">share</i>
+                                </button>
+                            </div>
                     </td>
                 </ng-container>
 
