[STREAMPIPES-426] Add minor improvements to user management

--- a/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.html
+++ b/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.html
@@ -47,12 +47,14 @@
                     <mat-form-field color="accent">
                         <mat-label>Initial password</mat-label>
                         <input formControlName="password" fxFlex
+                               type="password"
                                matInput
                                required>
                     </mat-form-field>
                     <mat-form-field color="accent">
                         <mat-label>Repeat password</mat-label>
                         <input formControlName="repeatPassword" fxFlex
+                               type="password"
                                matInput
                                required>
                     </mat-form-field>
@@ -62,6 +64,7 @@
                     <mat-form-field color="accent">
                         <mat-label>Client Secret</mat-label>
                         <input formControlName="clientSecret" fxFlex
+                               type="password"
                                matInput
                                required>
                     </mat-form-field>
