--- a/ui/src/app/configuration/security-configuration/security-user-configuration/security-user-config.component.html
+++ b/ui/src/app/configuration/security-configuration/security-user-configuration/security-user-config.component.html
@@ -18,7 +18,10 @@
 
 <div fxLayout="column">
     <div>
-        <button mat-button mat-raised-button color="accent" (click)="createUser()"><i
+        <button mat-button mat-raised-button
+                color="accent"
+                data-cy="add-new-user"
+                (click)="createUser()"><i
                 class="material-icons">add</i><span>&nbsp;New User</span></button>
     </div>
     <div fxFlex="100" fxLayout="column">
@@ -32,7 +35,9 @@
 
             <ng-container matColumnDef="username">
                 <th mat-header-cell mat-sort-header *matHeaderCellDef>Email</th>
-                <td mat-cell *matCellDef="let account">
+                <td mat-cell
+                    *matCellDef="let account"
+                    data-cy="user-accounts-table-row">
                     <h4 style="margin-bottom:0px;">{{account.username}}</h4>
                 </td>
             </ng-container>
@@ -66,7 +71,7 @@
                                         mat-raised-button
                                         matTooltip="Delete user"
                                         matTooltipPosition="above"
-                                        data-cy="user-delete-btn"
+                                        [attr.data-cy]="'user-delete-btn-' + account.fullName"
                                         (click)="deleteUser(account)">
                                         <i class="material-icons">delete</i>
                                         <span>&nbsp;Delete</span>
